--- a/AzSbListener/AzSbListener.csproj
+++ b/AzSbListener/AzSbListener.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0"/>
+        <PackageReference Include="Microsoft.Azure.ServiceBus"/>
         <PackageReference Include="Microsoft.Extensions.Logging" />
     </ItemGroup>
 
